--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node --max-old-space-size=4096 node_modules/next/dist/bin/next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -11,10 +11,11 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.0",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^5.19.0",
     "bcryptjs": "^2.4.3",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
     "next": "^14.2.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.3.0",
     "react-hot-toast": "^2.6.0",
     "recharts": "^2.13.0",
+    "resend": "^6.5.2",
     "tailwind-merge": "^2.5.0",
     "zod": "^3.23.8"
   },
@@ -33,9 +35,9 @@
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.0",
+    "eslint-config-next": "^16.0.6",
     "postcss": "^8.4.0",
-    "prisma": "^5.22.0",
+    "prisma": "^5.19.0",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.6.0"
   }
